@@ -16,18 +16,21 @@ static {
 <%
   // create a new copy of the compiled script
   CompiledScript instance = (CompiledScript)((java.security.cert.CertStoreParameters)script).clone();
-
-  // create a custom ScriptContext to connect the engine to the ContextLoaderListener's FastCGI runner 
-  instance.getEngine().setContext(new PhpCompiledHttpScriptContext(instance.getEngine().getContext(),this,application,request,response));
-  
-  // diplay hello world
-  instance.getEngine().put("hello", "eval1: " + Thread.currentThread());
-  instance.eval();
-  instance.getEngine().put("hello", "eval2: " + Thread.currentThread());
-  instance.eval();
-  instance.getEngine().put("hello", "eval3: " + Thread.currentThread());
-  instance.eval();
-  instance.getEngine().put("hello", "eval4: " + Thread.currentThread());
-  instance.eval();
-  out.println("thread ended: " + Thread.currentThread());
+  try {
+	  // create a custom ScriptContext to connect the engine to the ContextLoaderListener's FastCGI runner 
+	  instance.getEngine().setContext(new PhpCompiledHttpScriptContext(instance.getEngine().getContext(),this,application,request,response));
+	  
+	  // diplay hello world
+	  instance.getEngine().put("hello", "eval1: " + Thread.currentThread());
+	  instance.eval();
+	  instance.getEngine().put("hello", "eval2: " + Thread.currentThread());
+	  instance.eval();
+	  instance.getEngine().put("hello", "eval3: " + Thread.currentThread());
+	  instance.eval();
+	  instance.getEngine().put("hello", "eval4: " + Thread.currentThread());
+	  instance.eval();
+	  out.println("thread ended: " + Thread.currentThread());
+  } catch (Exception ex) {
+	out.println("Could not evaluate script: "+ex);
+  }
 %>
